# Fortuna

./: .gitignore  CHANGELOG.md  Dockerfile  Fortuna.pyx  MANIFEST.in  README.md  Storm.hpp  docker.sh  install.sh  meson.build  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: ci.yml  wheels.yml
benchmarks/: README.md  __init__.py  __main__.py  baseline.py  environment.py  formatting.py  model.py  runner.py
benchmarks/suites/: __init__.py  fortuna.py  reference.py  selectors.py
benchmarks/tests/: __init__.py  test_harness.py  test_selectors_suite.py
docs/: algorithms.md  api.md  development.md  guide.md  migration-5-to-6.md
fortuna_extras/: LICENSE  examples.py  fortuna_tests.py  monty_tests.py  multi_threading.py  platform_limits.py  pyewacket_tests.py  range_tests.py  rng_tests.py  seed_tests.py
src/Fortuna/: __init__.py  _core.pyi  _core.pyx  _selectors.py  py.typed
src/Fortuna/cpp/: fortuna_core.hpp
tests/: test_concurrency.py  test_core.py  test_distributions.py  test_exports.py  test_generator_subclass_api.py  test_normal_profiles.py  test_numeric_api_contract.py  test_profiles.py  test_scalar_fast_paths.py  test_selector_construction.py  test_selector_fast_paths.py  test_selector_ownership.py  test_selectors.py  test_stable_sequences.py  test_statistics.py  test_typing_contract.py
tests/typing/: consumer.py
